# particle-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.h  ParticleSystem.h
src/: Ball.cpp  ParticleSystem.cpp  main.cpp
